added darpa stuff

--- a/config/uav/f450_darpa/constraint_manager/constraint_manager.yaml
+++ b/config/uav/f450_darpa/constraint_manager/constraint_manager.yaml
@@ -10,35 +10,38 @@ estimator_types: [
   "GPS",
   "OPTFLOW",
   "OTHER",
+  "HECTOR",
 ]
 
 constraints: [
-  "darpa",
+  "slow",
 ]
 
 constraint_management:
 
   # list of allowed gains per odometry mode
   allowed_constraints:
-    T265: ["darpa"]
-    OBJECT: ["darpa"]
-    VIO: ["darpa"]
-    ICP: ["darpa"]
-    RTK: ["darpa"]
-    OPTFLOWGPS: ["darpa"]
-    GPS: ["darpa"]
-    OPTFLOW: ["darpa"]
-    OTHER: ["darpa"]
+    T265: ["slow"]
+    OBJECT: ["slow"]
+    VIO: ["slow"]
+    ICP: ["slow"]
+    RTK: ["slow"]
+    OPTFLOWGPS: ["slow"]
+    GPS: ["slow"]
+    OPTFLOW: ["slow"]
+    OTHER: ["slow"]
+    HECTOR: ["slow"]
 
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_constraints:
-    T265: "darpa"
-    OBJECT: "darpa"
-    VIO: "darpa"
-    ICP: "darpa"
-    RTK: "darpa"
-    OPTFLOWGPS: "darpa"
-    GPS: "darpa"
-    OPTFLOW: "darpa"
-    OTHER: "darpa"
+    T265: "slow"
+    OBJECT: "slow"
+    VIO: "slow"
+    ICP: "slow"
+    RTK: "slow"
+    OPTFLOWGPS: "slow"
+    GPS: "slow"
+    OPTFLOW: "slow"
+    OTHER: "slow"
+    HECTOR: "slow"
