--- a/config/uav/f450_darpa/control_manager.yaml
+++ b/config/uav/f450_darpa/control_manager.yaml
@@ -1,17 +1,14 @@
 # - list of names of dynamically loaded trackers
 trackers : [
   "MpcTracker",
-  "LineTracker",
   "LandoffTracker",
   "NullTracker",
 ]
 
 # - list of names of dynamically loaded controllers
 controllers : [
-  "So3Controller",
   "MpcController",
   "FailsafeController",
-  "AttitudeController",
 ]
 
 # - this is the "do nothing tracker", which is active when no other is
@@ -37,10 +34,10 @@ safety:
   failsafe_controller: "FailsafeController"
 
   # controller used for emergancy (controller) landing
-  eland_controller: "So3Controller"
+  eland_controller: "MpcController"
 
   # after not receiving odometry for more than this, the failsafe landing will trigger
-  odometry_max_missing_time: 0.5 # [s]
+  odometry_max_missing_time: 1.0 # [s]
 
   elanding_timer_rate: 10
   elanding_cutoff_height:  1.0
@@ -49,7 +46,7 @@ safety:
   tilt_error_failsafe:
 
     enabled: false
-    tilt_error_threshold: 30 # [deg]
+    tilt_error_threshold: 40 # [deg]
     min_height: 0.5 # [m]
 
   rc_eland:
@@ -63,8 +60,8 @@ obstacle_bumper:
   enabled: true
   timer_rate: 20 # [Hz]
 
-  horizontal_distance: 0.9 # [m]
-  vertical_distance: 0.3 # [m]
+  horizontal_distance: 1.0 # [m]
+  vertical_distance: 1.0 # [m]
 
   obstacle_hugging:
 
@@ -73,12 +70,12 @@ obstacle_bumper:
   # true: the drone will move away from obstacles that appear within the radius
   repulsion:
 
-    enabled: false
+    enabled: true
 
-    horizontal_distance: 0.8 # [m]
-    horizontal_offset: 0.3 # [m] by how much to repulse from the horizontal_distance limit
+    horizontal_distance: 1.0 # [m]
+    horizontal_offset: 0.1 # [m] by how much to repulse from the horizontal_distance limit
 
-    vertical_distance: 0.5 # [m]
+    vertical_distance: 1.0 # [m]
     vertical_offset: 0.1 # [m]
 
 joystick:
