--- a/config/uav/f450_darpa/gain_manager/gains.yaml
+++ b/config/uav/f450_darpa/gain_manager/gains.yaml
@@ -1,12 +1,12 @@
-optflow:
+supersoft:
 
   horizontal:
-    kp: 3.0
-    kv: 1.0
+    kp: 3.2
+    kv: 2.0
     ka: 1.0
 
     attitude:
-      kq: 8.0
+      kq: 6.0
       kw: 0.0
 
     kib: 0.2
@@ -16,27 +16,27 @@ optflow:
     kiw_lim: 10.0
 
   vertical:
-    kp: 17.0
-    kv: 8.0
+    kp: 5.0
+    kv: 5.0
     ka: 1.0
 
     attitude:
-      kq: 1.0
+      kq: 5.0
       kw: 1.0
 
   weight_estimator:
     km: 1.0
     km_lim: 3.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
 
-optflow_dark:
+soft:
 
   horizontal:
-    kp: 2.0
-    kv: 1.0
+    kp: 2.8
+    kv: 1.4
     ka: 1.0
 
     attitude:
-      kq: 8.0
+      kq: 6.0
       kw: 0.0
 
     kib: 0.2
@@ -46,12 +46,12 @@ optflow_dark:
     kiw_lim: 10.0
 
   vertical:
-    kp: 8.6
-    kv: 4.3
+    kp: 15.0
+    kv: 8.0
     ka: 1.0
 
     attitude:
-      kq: 1.0
+      kq: 10.0
       kw: 1.0
 
   weight_estimator:
