--- a/config/uav/f450_darpa/control_manager.yaml
+++ b/config/uav/f450_darpa/control_manager.yaml
@@ -45,7 +45,7 @@ safety:
 
   tilt_error_failsafe:
 
-    enabled: false
+    enabled: true
     tilt_error_threshold: 40 # [deg]
     min_height: 0.5 # [m]
 
@@ -61,7 +61,7 @@ obstacle_bumper:
   timer_rate: 20 # [Hz]
 
   horizontal_distance: 1.0 # [m]
-  vertical_distance: 1.0 # [m]
+  vertical_distance: 0.5 # [m]
 
   obstacle_hugging:
 
@@ -75,7 +75,7 @@ obstacle_bumper:
     horizontal_distance: 1.0 # [m]
     horizontal_offset: 0.1 # [m] by how much to repulse from the horizontal_distance limit
 
-    vertical_distance: 1.0 # [m]
+    vertical_distance: 0.5 # [m]
     vertical_offset: 0.1 # [m]
 
 joystick:
