--- a/config/uav/f450_darpa/control_manager.yaml
+++ b/config/uav/f450_darpa/control_manager.yaml
@@ -78,6 +78,11 @@ obstacle_bumper:
     vertical_distance: 0.5 # [m]
     vertical_offset: 0.1 # [m]
 
+automatic_pc_shutdown:
+
+  enabled: true
+  distance_threshold: 5 # [m]
+
 joystick:
 
   enabled: false
