--- a/config/simulation/control_manager.yaml
+++ b/config/simulation/control_manager.yaml
@@ -60,6 +60,7 @@ safety:
   rc_eland:
 
     enabled: true
+    # activation channel
     channel_number: 7 # [-]
     threshold: 1500 # [us]
 
@@ -155,6 +156,7 @@ joystick:
 rc_joystick:
 
   enabled: false
+  # activation channel
   channel_number: 6 # indexed from 0
 
   # switch the chanel repeatedly to enable the joystic control
