generalized takeoff and landing for arbitrary initial z

--- a/config/simulation/control_manager.yaml
+++ b/config/simulation/control_manager.yaml
@@ -162,7 +162,9 @@ rc_joystick:
   # switch the chanel repeatedly to enable the joystic control
   # n_switches need to occur within a time timeout
   timeout: 2.0 # [s]
-  n_switches: 5 # [-]
+  n_switches: 4 # [-]
+
+  carrot_distance: 1.0 # [m]
 
   channels:
     pitch: 2
