--- a/config/default/constraint_manager/constraint_manager.yaml
+++ b/config/default/constraint_manager/constraint_manager.yaml
@@ -18,35 +18,34 @@ constraints: [
   "slow",
   "medium",
   "fast",
-  "darpa",
 ]
 
 constraint_management:
 
   # list of allowed gains per odometry mode
   allowed_constraints:
-    BRICKFLOW: ["slow", "medium", "fast", "darpa"]
-    OPTFLOW: ["slow", "medium", "fast", "darpa"]
-    HECTOR: ["slow", "medium", "fast", "darpa"]
-    T265: ["slow", "medium", "fast"]
+    BRICKFLOW: ["slow"]
+    OPTFLOW: ["slow", "medium"]
+    HECTOR: ["slow"]
+    T265: ["slow"]
     BRICK: ["slow"]
     VIO: ["slow"]
-    ICP: ["slow", "darpa"]
-    RTK: ["slow", "medium", "fast", "darpa"]
-    OPTFLOWGPS: ["slow", "darpa"]
-    GPS: ["slow", "medium", "fast", "darpa"]
-    OPTFLOW: ["slow", "medium", "fast", "darpa"]
+    ICP: ["slow"]
+    RTK: ["slow", "medium", "fast"]
+    OPTFLOWGPS: ["slow"]
+    GPS: ["slow", "medium", "fast"]
+    OPTFLOW: ["slow", "medium"]
     OTHER: ["slow"]
 
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_constraints:
     BRICKFLOW: "slow"
-    HECTOR: "darpa"
+    HECTOR: "slow"
     T265: "slow"
     BRICK: "slow"
     VIO: "slow"
-    ICP: "darpa"
+    ICP: "slow"
     RTK: "medium"
     OPTFLOWGPS: "slow"
     GPS: "medium"
