--- a/config/uav/f550/gain_manager/gain_manager.yaml
+++ b/config/uav/f550/gain_manager/gain_manager.yaml
@@ -9,6 +9,8 @@ gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
+    BRICKFLOW: ["supersoft", "soft"]
+    BRICK: ["supersoft", "soft"]
     T265: ["supersoft", "soft", "tight"]
     OBJECT: ["supersoft"]
     VIO: ["supersoft"]
@@ -23,6 +25,8 @@ gain_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_gains:
+    BRICKFLOW: "supersoft"
+    BRICK: "supersoft"
     T265: "supersoft"
     OBJECT: "supersoft"
     VIO: "supersoft"
