updated and tuned simulation gains, slightly updated uav gains

--- a/config/simulation/f450/gain_manager/gain_manager.yaml
+++ b/config/simulation/f450/gain_manager/gain_manager.yaml
@@ -29,8 +29,8 @@ gain_management:
     BRICK: "supersoft"
     VIO: "supersoft"
     ICP: "supersoft"
-    RTK: "tight"
-    OPTFLOWGPS: "tight"
-    GPS: "tight"
+    RTK: "soft"
+    OPTFLOWGPS: "soft"
+    GPS: "soft"
     OPTFLOW: "soft"
     OTHER: "supersoft"
