--- a/config/uav/t650/gain_manager/gain_manager.yaml
+++ b/config/uav/t650/gain_manager/gain_manager.yaml
@@ -30,7 +30,7 @@ gain_management:
     OBJECT: "supersoft"
     VIO: "supersoft"
     ICP: "supersoft"
-    RTK: "tight"
+    RTK: "soft"
     OPTFLOWGPS: "supersoft"
     GPS: "soft"
     OPTFLOW: "soft"
