Added new estimators to constraint and gain managers

--- a/config/default/constraint_manager/constraint_manager.yaml
+++ b/config/default/constraint_manager/constraint_manager.yaml
@@ -1,12 +1,13 @@
 rate: 25
 
 estimator_types: [
+  "VSLAM",
   "BRICKFLOW",
   "HECTOR",
   "T265",
   "BRICK",
   "VIO",
-  "ICP",
+  "LIDAR",
   "RTK",
   "OPTFLOWGPS",
   "GPS",
@@ -24,13 +25,14 @@ constraint_management:
 
   # list of allowed gains per odometry mode
   allowed_constraints:
+    VSLAM: ["slow", "medium"]
     BRICKFLOW: ["slow"]
     OPTFLOW: ["slow", "medium"]
     HECTOR: ["slow"]
     T265: ["slow"]
     BRICK: ["slow"]
-    VIO: ["slow"]
-    ICP: ["slow"]
+    VIO: ["slow", "medium"]
+    LIDAR: ["slow", "medium"]
     RTK: ["slow", "medium", "fast"]
     OPTFLOWGPS: ["slow"]
     GPS: ["slow", "medium", "fast"]
@@ -40,12 +42,13 @@ constraint_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_constraints:
+    VSLAM: "slow"
     BRICKFLOW: "slow"
     HECTOR: "slow"
     T265: "slow"
     BRICK: "slow"
     VIO: "slow"
-    ICP: "slow"
+    LIDAR: "slow"
     RTK: "medium"
     OPTFLOWGPS: "slow"
     GPS: "medium"
