added controller namespace and name into the interface

--- a/config/simulation/f450/control_manager.yaml
+++ b/config/simulation/f450/control_manager.yaml
@@ -17,6 +17,7 @@ controllers : [
   "AttitudeController",
   "AccelerationController",
   "FailsafeController",
+  "EmergancyController",
 ]
 
 safety:
