--- a/config/default/control_manager.yaml
+++ b/config/default/control_manager.yaml
@@ -13,6 +13,7 @@ controllers : [
   "MpcController",
   "AttitudeController",
   "FailsafeController",
+  "EmergancyController",
 ]
 
 # - this is the "do nothing tracker", which is active when no other is
@@ -41,7 +42,7 @@ safety:
   failsafe_controller: "FailsafeController"
 
   # controller used for emergency (controller) landing
-  eland_controller: "MpcController"
+  eland_controller: "EmergancyController"
 
   # after not receiving odometry for more than this, the failsafe landing will trigger
   odometry_max_missing_time: 1.0 # [s]
