--- a/config/default/controllers.yaml
+++ b/config/default/controllers.yaml
@@ -1,29 +1,41 @@
 So3Controller:
   address: "mrs_controllers/So3Controller"
+  namespace: "so3_controller"
   eland_threshold: 1.5
   failsafe_threshold: 2.5
 
 MpcController:
   address: "mrs_controllers/MpcController"
+  namespace: "mpc_controller"
   eland_threshold: 3.0
   failsafe_threshold: 4.0
 
 AttitudeController:
   address: "mrs_controllers/AttitudeController"
+  namespace: "attitude_controller"
   eland_threshold: 0.0
   failsafe_threshold: 0.0
 
 AccelerationController:
   address: "mrs_controllers/AccelerationController"
+  namespace: "acceleration_controller"
   eland_threshold: 0.0
   failsafe_threshold: 0.0
 
 FailsafeController:
   address: "mrs_controllers/FailsafeController"
+  namespace: "failsafe_controller"
   eland_threshold: 0.0
   failsafe_threshold: 0.0
 
+EmergancyController:
+  address: "mrs_controllers/MpcController"
+  namespace: "emergancy_controller"
+  eland_threshold: 3.0
+  failsafe_threshold: 5.0
+
 NsfController:
   address: "mrs_controllers/NsfController"
+  namespace: "nsf_controller"
   eland_threshold: 1.5
   failsafe_threshold: 3.0
