Add pavel slam for Chlumin experiment

--- a/config/default/gain_manager/gain_manager.yaml
+++ b/config/default/gain_manager/gain_manager.yaml
@@ -12,6 +12,7 @@ estimator_types: [
   "OPTFLOWGPS",
   "GPS",
   "OPTFLOW",
+  "PAVEL",
   "OTHER",
 ]
 
@@ -34,6 +35,7 @@ gain_management:
     OPTFLOWGPS: ["default"]
     GPS: ["default"]
     OPTFLOW: ["default"]
+    PAVEL: ["default"]
     OTHER: ["default"]
 
   # those gains will be used automatically when a localization mode switches
@@ -50,4 +52,5 @@ gain_management:
     OPTFLOWGPS: "default"
     GPS: "default"
     OPTFLOW: "default"
+    PAVEL: "default"
     OTHER: "default"
