--- a/config/simulation/f550/control_manager.yaml
+++ b/config/simulation/f550/control_manager.yaml
@@ -22,23 +22,10 @@ controllers : [
 
 safety:
 
-  tilt_limit_eland: 60 # [deg]
-  tilt_limit_disarm: 90 # [deg]
+  min_thrust_null_tracker: 0.15 # [] minimum thrust when not flying
 
-  # tracker used for emergency hover routine
-  ehover_tracker: "LandoffTracker"
-
-  # controller used for safety landing (feed forward)
-  failsafe_controller: "FailsafeController"
-
-  # controller used for emergency (controller) landing
-  eland_controller: "MpcController"
+  safety_timer_rate: 10 # [Hz]
+  failsafe_timer_rate: 10 # [Hz]
 
   # after not receiving odometry for more than this, the failsafe landing will trigger
-  odometry_max_missing_time: 1.0 # [s]
-
-  tilt_error_failsafe:
-
-    enabled: false
-    tilt_error_threshold: 30 # [deg]
-    min_height: 0.5 # [m]
+  odometry_max_missing_time: 2.0 # [s]
