--- a/config/simulation/f550/uav_manager.yaml
+++ b/config/simulation/f550/uav_manager.yaml
@@ -6,7 +6,7 @@ takeoff:
 
   after_takeoff:
     tracker: "MpcTracker"
-    controller: "MpcController"
+    controller: "So3Controller"
 
     pirouette: false
 
