Add PAVEl estimator gains

--- a/config/default/constraint_manager/constraint_manager.yaml
+++ b/config/default/constraint_manager/constraint_manager.yaml
@@ -12,6 +12,7 @@ estimator_types: [
   "OPTFLOWGPS",
   "GPS",
   "OPTFLOW",
+  "PAVEL",
   "OTHER",
 ]
 
@@ -37,6 +38,7 @@ constraint_management:
     OPTFLOWGPS: ["slow"]
     GPS: ["slow", "medium", "fast"]
     OPTFLOW: ["slow", "medium"]
+    PAVEL: ["slow"]
     OTHER: ["slow"]
 
   # those gains will be used automatically when a localization mode switches
@@ -53,4 +55,5 @@ constraint_management:
     OPTFLOWGPS: "slow"
     GPS: "medium"
     OPTFLOW: "slow"
+    PAVEL: "slow"
     OTHER: "slow"
