--- a/config/simulation/f550/gain_manager/gain_manager.yaml
+++ b/config/simulation/f550/gain_manager/gain_manager.yaml
@@ -19,7 +19,7 @@ gain_management:
     OPTFLOWGPS: ["supersoft", "soft", "tight"]
     GPS: ["supersoft", 'soft', 'tight']
     OPTFLOW: ["supersoft", "soft"]
-    PAVEL: ["supersoft", "soft"]
+    PAVEL: ["supersoft"]
     OTHER: ["supersoft"]
 
   # those gains will be used automatically when a localization mode switches
