--- a/config/default/uav_manager.yaml
+++ b/config/default/uav_manager.yaml
@@ -35,6 +35,7 @@ landing:
 
   # those two must apply simultaneously
   landing_cutoff_mass_factor:  0.5 # how much light does the drone appear to be?
+  landing_cutoff_timeout:  2.0 # [s] how long does the thrust has to be bellow the mass factor
 
   disarm: true
 
