--- a/config/simulation/f550/control_manager.yaml
+++ b/config/simulation/f550/control_manager.yaml
@@ -17,7 +17,7 @@ controllers : [
   "AttitudeController",
   "AccelerationController",
   "FailsafeController",
-  "EmergancyController",
+  "EmergencyController",
 ]
 
 safety:
