--- a/config/uav/t650/gain_manager/gain_manager.yaml
+++ b/config/uav/t650/gain_manager/gain_manager.yaml
@@ -35,6 +35,6 @@ gain_management:
     RTK: "soft"
     OPTFLOWGPS: "supersoft"
     GPS: "soft"
-    OPTFLOW: "soft"
+    OPTFLOW: "supersoft"
     HECTOR: "supersoft"
     OTHER: "supersoft"
