--- a/config/default/uav_manager.yaml
+++ b/config/default/uav_manager.yaml
@@ -1,4 +1,5 @@
 null_tracker: "NullTracker"
+partial_landing_controller: "PartialLandingController" # has an exception for allowing takeoff
 
 # require gain or constraint manager running to takeoff?
 require_gain_manager: true
