--- a/config/simulation/f550/control_manager.yaml
+++ b/config/simulation/f550/control_manager.yaml
@@ -18,6 +18,7 @@ controllers : [
   "AccelerationController",
   "FailsafeController",
   "EmergencyController",
+  "PartialLandingController",
 ]
 
 safety:
