--- a/config/default/controllers.yaml
+++ b/config/default/controllers.yaml
@@ -3,45 +3,53 @@ So3Controller:
   namespace: "so3_controller"
   eland_threshold: 1.5 # [m], position error triggering eland
   failsafe_threshold: 2.5 # [m], position error triggering failsafe land
+  odometry_innovation_threshold: 1.5 # [m], position odometry innovation threshold
 
 MpcController:
   address: "mrs_controllers/MpcController"
   namespace: "mpc_controller"
   eland_threshold: 2.0 # [m], position error triggering eland
   failsafe_threshold: 3.0 # [m], position error triggering failsafe land
+  odometry_innovation_threshold: 2.0 # [m], position odometry innovation threshold
 
 AttitudeController:
   address: "mrs_controllers/AttitudeController"
   namespace: "attitude_controller"
   eland_threshold: 0.0 # [m], position error triggering eland
   failsafe_threshold: 0.0 # [m], position error triggering failsafe land
+  odometry_innovation_threshold: 0.0 # [m], position odometry innovation threshold
 
 AccelerationController:
   address: "mrs_controllers/AccelerationController"
   namespace: "acceleration_controller"
   eland_threshold: 0.0 # [m], position error triggering eland
   failsafe_threshold: 0.0 # [m], position error triggering failsafe land
+  odometry_innovation_threshold: 0.0 # [m], position odometry innovation threshold
 
 FailsafeController:
   address: "mrs_controllers/FailsafeController"
   namespace: "failsafe_controller"
   eland_threshold: 0.0 # [m], position error triggering eland
   failsafe_threshold: 0.0 # [m], position error triggering failsafe land
+  odometry_innovation_threshold: 0.0 # [m], position odometry innovation threshold
 
 EmergencyController:
   address: "mrs_controllers/MpcController"
   namespace: "emergency_controller"
   eland_threshold: 3.0 # [m], position error triggering eland
   failsafe_threshold: 4.0 # [m], position error triggering failsafe land
+  odometry_innovation_threshold: 3.0 # [m], position odometry innovation threshold
 
 NsfController:
   address: "mrs_controllers/NsfController"
   namespace: "nsf_controller"
   eland_threshold: 1.5 # [m], position error triggering eland
   failsafe_threshold: 3.0 # [m], position error triggering failsafe land
+  odometry_innovation_threshold: 1.5 # [m], position odometry innovation threshold
 
 PartialLandingController:
   address: "mrs_controllers/PartialLandingController"
   namespace: "partial_landing_controller"
   eland_threshold: 0.0 # [m], position error triggering eland
   failsafe_threshold: 0.0 # [m], position error triggering failsafe land
+  odometry_innovation_threshold: 0.0 # [m], position odometry innovation threshold
