extracted escalating failsafe into a standalone function

--- a/config/default/control_manager.yaml
+++ b/config/default/control_manager.yaml
@@ -31,7 +31,6 @@ safety:
 
   safety_timer_rate: 100 # [Hz]
   failsafe_timer_rate: 100 # [Hz]
-  escalating_failsafe_timeout: 1.0 # [s]
 
   tilt_limit_eland: 60 # [deg]
   yaw_limit_eland: 90 # [deg]
@@ -48,12 +47,17 @@ safety:
 
   # emergency landing (still feedback)
   eland:
+
     controller: "EmergencyController"
     cutoff_mass_factor:  0.5 # how much lighter does the drone appear to be?
     cutoff_timeout:  2.0 # [s] how long does the thrust has to be bellow the mass factor
 
     disarm: true
     timer_rate: 10
+
+  escalating_failsafe:
+
+    timeout: 2.0 # [s]
 
   tilt_error_failsafe:
 
