icp gains, constraints

--- a/config/default/gain_manager/gain_manager.yaml
+++ b/config/default/gain_manager/gain_manager.yaml
@@ -1,6 +1,7 @@
 rate: 25
 
 estimator_types: [
+  "ICP",
   "VSLAM",
   "BRICKFLOW",
   "HECTOR",
@@ -23,6 +24,7 @@ gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
+    ICP: ["default"]
     VSLAM: ["default"]
     BRICKFLOW: ["default"]
     HECTOR: ["default"]
@@ -39,6 +41,7 @@ gain_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_gains:
+    ICP: "default"
     VSLAM: "default"
     BRICKFLOW: "default"
     HECTOR: "default"
