--- a/config/default/constraint_manager/constraint_manager.yaml
+++ b/config/default/constraint_manager/constraint_manager.yaml
@@ -1,6 +1,7 @@
 rate: 25
 
 estimator_types: [
+  "ICP",
   "VSLAM",
   "BRICKFLOW",
   "HECTOR",
@@ -25,6 +26,7 @@ constraint_management:
 
   # list of allowed gains per odometry mode
   allowed_constraints:
+    ICP: ["slow", "medium"]
     VSLAM: ["slow", "medium"]
     BRICKFLOW: ["slow"]
     OPTFLOW: ["slow", "medium"]
@@ -42,6 +44,7 @@ constraint_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_constraints:
+    ICP: "slow"
     VSLAM: "slow"
     BRICKFLOW: "slow"
     HECTOR: "slow"
