--- a/config/simulation/t650/control_manager.yaml
+++ b/config/simulation/t650/control_manager.yaml
@@ -5,6 +5,7 @@ trackers : [
   "LandoffTracker",
   "JoyTracker",
   "MatlabTracker",
+  "SpeedTracker",
   "NullTracker",
   "JoyBumperTracker",
 ]
