--- a/config/uav/t650/gain_manager/gain_manager.yaml
+++ b/config/uav/t650/gain_manager/gain_manager.yaml
@@ -8,6 +8,7 @@ gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
+    ICP: ["supersoft", "soft"]
     VSLAM: ["supersoft", "soft"]
     BRICKFLOW: ["supersoft", "soft"]
     BRICK: ["supersoft", "soft"]
@@ -25,6 +26,7 @@ gain_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_gains:
+    ICP: "supersoft"
     VSLAM: "supersoft"
     BRICKFLOW: "supersoft"
     BRICK: "supersoft"
