--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,9 @@
   <depend>nodelet</depend>
   <depend>mrs_lib</depend>
   <depend>mavros_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
 
   <export>
     <nodelet plugin="${prefix}/plugins.xml" />
