--- a/config/uav/f450/gain_manager/gain_manager.yaml
+++ b/config/uav/f450/gain_manager/gain_manager.yaml
@@ -20,6 +20,7 @@ gain_management:
     OPTFLOW: ["supersoft"]
     OTHER: ["supersoft"]
     HECTOR: ["supersoft"]
+    PAVEL: ["supersoft"]
 
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
@@ -37,3 +38,4 @@ gain_management:
     OPTFLOW: "supersoft"
     OTHER: "supersoft"
     HECTOR: "supersoft"
+    PAVEL: "supersoft"
