--- a/config/default/control_manager.yaml
+++ b/config/default/control_manager.yaml
@@ -113,22 +113,28 @@ joystick:
 
   enabled: true
 
+  # the trajectory mode is for debugging trajectory control ONLY
   mode: 0 # {0 = goto, 1 = trajectory}
 
+  # carrot on a stick distance for the goto mode
   carrot_distance: 1.00 # [m]
 
   joystick_timer_rate: 30 # [Hz]
 
-  # tracker and controller used to control the drone using a joystick
-  tracker: "JoyTracker"
-  controller: "AttitudeController"
+  # mainly for tuning low-level attitude controllers
+  # is initiated by pressing "start" for > 3 secs
+  attitude_control:
 
-  # what tracker and controller should be activate when
-  # switching back from joystick control?
-  fallback:
+    # tracker and controller used to control the drone using a joystick
+    tracker: "JoyTracker"
+    controller: "AttitudeController"
 
-    tracker: "MpcTracker"
-    controller: "MpcController"
+    # what tracker and controller should be activate when
+    # switching back from joystick control?
+    fallback:
+
+      tracker: "MpcTracker"
+      controller: "MpcController"
 
   # channel numbers, indeces in array
   channels:
@@ -143,8 +149,8 @@ joystick:
     Y: 3 # []
 
     # if the "start" button is pressed and held down for > 3 sec, the UAV switches
-    # to a tracker and controller specified above. Autonomy in this mode is not
-    # guaranteed, it depends on the specified tracker and controller.
+    # to a tracker and controller specified above in the "attitude_control" section.
+    # Autonomy in this mode is not guaranteed, it depends on the specified tracker and controller.
     start: 7 # []
 
     # If "back" button is pressed, the UAV switches to a GOTO mode, where
