--- a/config/uav/f550/gain_manager/gain_manager.yaml
+++ b/config/uav/f550/gain_manager/gain_manager.yaml
@@ -21,6 +21,7 @@ gain_management:
     OPTFLOW: ["supersoft", "soft"]
     OTHER: ["supersoft"]
     HECTOR: ["supersoft"]
+    PAVEL: ["supersoft"]
 
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
@@ -38,3 +39,4 @@ gain_management:
     OPTFLOW: "supersoft"
     HECTOR: "supersoft"
     OTHER: "supersoft"
+    PAVEL: "supersoft"
