--- a/config/default/constraint_manager/constraint_manager.yaml
+++ b/config/default/constraint_manager/constraint_manager.yaml
@@ -14,6 +14,7 @@ estimator_types: [
   "GPS",
   "OPTFLOW",
   "OTHER",
+  "ALOAM",
 ]
 
 constraints: [
@@ -31,6 +32,7 @@ constraint_management:
     BRICKFLOW: ["slow"]
     OPTFLOW: ["slow", "medium"]
     HECTOR: ["slow"]
+    ALOAM: ["slow"]
     T265: ["slow"]
     BRICK: ["slow"]
     VIO: ["slow", "medium"]
@@ -48,6 +50,7 @@ constraint_management:
     VSLAM: "slow"
     BRICKFLOW: "slow"
     HECTOR: "slow"
+    ALOAM: "slow"
     T265: "slow"
     BRICK: "slow"
     VIO: "slow"
