Add aloam to all gain_manager configs

--- a/config/uav/f450/gain_manager/gain_manager.yaml
+++ b/config/uav/f450/gain_manager/gain_manager.yaml
@@ -21,6 +21,7 @@ gain_management:
     OPTFLOW: ["supersoft"]
     OTHER: ["supersoft"]
     HECTOR: ["supersoft"]
+    ALOAM: ["supersoft"]
 
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
@@ -39,3 +40,4 @@ gain_management:
     OPTFLOW: "supersoft"
     OTHER: "supersoft"
     HECTOR: "supersoft"
+    ALOAM: "supersoft"
